tests/NormalTests/paczka1/fuzzy1/10428247.err
Error in line 1: 6KA8Ld A718 69,3
Error in line 28: nPaQ A718 24,6
Error in line 29: nPaQ S51 49,6
